# PQVPN

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  PATTERN_ANALYSIS_RESULTS.md  README.md  SECURITY.md  TEST_RESULTS.md  benchmark.py  client.py  main.py  main.py.bak  manual_test_bootstrap.py  manual_test_onion.py  manual_test_poisoning.py  manual_test_traffic_anti_dpi.py  pyproject.toml  requirements.txt  ruff_report.json  sample_plugin.py  server.py  test_modularity.py
.github/: dependabot.yml
.github/workflows/: auto-merge-dependabot.yml  ci.yml  codeql.yml  dependency-review.yml  link-check.yml  maintenance.yml  pip-audit.yml  release.yml  scorecard.yml
PQVPN/: .coverage  .test.py  OBJECTIVE.md  PQVPN_MULTI_HOP_SUMMARY.md  README.md  README_GUI.md  README_QUICKSTART.yaml  __init__.py  cli.py  compute_peerid.py  config.yaml  config_schema.py  create_keys.sh  debug_inst.py  example_signature.py  framing.py  generate_keys.py  gui.py  known_peers.yaml  main.py  main.py.bak  main.txt  metrics_http.py  node.py  pqsig.py  pqvpn.py  pqvpn_kernel.py  pytest-report.xml  pytest.ini  requirements.txt  run_vpn.sh  setup.py  socks5_proxy.py  start_test.sh  test_alice_bob.py  test_local.sh  test_server.py  test_vpn.sh  tmp_cfg.yaml  token_lock.py  (+2 more)
PQVPN/.github/: dependabot.yml
PQVPN/keys/: ed25519.pem  kyber1024.key  mldsa87.key  x25519.key
PQVPN/plugins/: README.md  example_plugin.py
PQVPN/pqvpn/: config.py  crypto.py  dht.py  discovery.py  oqs_shim.py  token_lock.py
PQVPN/pqvpn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
PQVPN/scripts/: continuous_dev_cycle.sh  cron_summary.sh  enable_auto_post.flag  fake_gui_sender.py  generate_tun_setup.py  install_liboqs.sh  install_pqvpn_polkit.sh  log_correlate.py  (+7 more)
benchmarks/: benchmark.py
docs/: ARCHITECTURE.md  DEV_LOOP.md  DEV_PLAN.md  README.md  ROADMAP.md  THREAT_MODEL.md  architecture.md  audit_report.md  design_poisoning_defenses.md  ideas.md  manual_test_checklist.md  threat-model.md  usage.md
scripts/: dev_loop.sh  install_liboqs.sh  new.sh  run_tests.sh  security_checks.sh  think.sh
src/: main.py
testnet/: config0.yaml  deploy_testnet.py
tests/: test_2node_integration.py  test_anti_dpi.py  test_bootstrap.py  test_cli.py  test_config.py  test_discovery.py  test_layered_crypto.py  test_network.py  test_plugins.py  test_poisoning_defenses.py  test_ratchet.py  test_relay_integration.py  test_robustness.py  test_session.py  test_traffic_shaper.py  test_zero_trust.py  test_zkp.py
(+97 files in other folders)
