[project]
name = "pqvpn"
version = "0.1.0"
description = "Path Quilt VPN (PQVPN) - a P2P VPN concept project"
readme = "README.md"
requires-python = ">=3.10,<4"
authors = [{ name = "Davide Di Pino" }]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
