[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pqvpn"
version = "0.1.0"
description = "Path Quilt VPN (PQVPN) - a P2P VPN concept project"
readme = "README.md"
requires-python = ">=3.10,<4"
authors = [{ name = "Davide Di Pino" }]
license = { text = "Proprietary - All rights reserved" }

[project.urls]
Repository = "https://github.com/tadaka9/PQVPN"

[project.scripts]
pqvpn = "main:main"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pqvpn"]
py-modules = ["main"]
include-package-data = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
