[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pqvpn"
version = "0.1.0"
description = "Path Quilt VPN (PQVPN) - a P2P VPN concept project"
readme = "README.md"
requires-python = ">=3.10,<4"
authors = [{ name = "Davide Di Pino" }]
license = { text = "Proprietary - All rights reserved" }
dependencies = [
  "aiohttp>=3.8",
  "cryptography>=40.0",
  "pydantic>=2.0",
  "ruamel.yaml>=0.17",
  "oqs==0.14.1",
]

[project.urls]
Repository = "https://github.com/tadaka9/PQVPN"

[project.scripts]
pqvpn = "pqvpn.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-asyncio>=0.21",
  "pytest-cov>=4",
  "ruff>=0.1.0",
  "bandit>=1.7",
  "safety>=2.3",
  "pylint>=3.0",
]
tun = [
  "pytun>=1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pqvpn"]
py-modules = ["main"]
include-package-data = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
